--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
   "license": "MIT",
   "dependencies": {
     "acorn": "^8.4.1",
-    "astring": "^1.7.5"
+    "astring": "^1.7.5",
+    "prettier": "^2.3.2"
   },
   "scripts": {
     "test": "node test.js"
