--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
   "dependencies": {
     "acorn": "^8.4.1",
     "astring": "^1.7.5",
+    "chalk": "^4.1.2",
     "prettier": "^2.3.2"
   },
   "scripts": {
