--- a/package.json
+++ b/package.json
@@ -1,17 +1,14 @@
 {
-  "name": "async-transformer",
-  "version": "1.0.0",
-  "main": "index.js",
-  "repository": "https://github.com/bramblex/async-transformer.git",
-  "author": "brambles<qjnight@gmail.com>",
-  "license": "MIT",
   "dependencies": {
-    "acorn": "^8.4.1",
-    "astring": "^1.7.5",
-    "chalk": "^4.1.2",
-    "prettier": "^2.3.2"
+    "@types/node": "^17.0.23",
+    "@types/source-map": "^0.5.7",
+    "acron": "^1.0.5",
+    "astring": "^1.8.1",
+    "ava": "^4.1.0",
+    "typescript": "^4.6.3"
   },
   "scripts": {
-    "test": "node test.js"
+    "build": "tsc",
+    "test": "ava test"
   }
 }
