--- a/package.json
+++ b/package.json
@@ -1,10 +1,12 @@
 {
   "dependencies": {
+    "@types/estraverse": "^5.1.1",
     "@types/node": "^17.0.23",
     "@types/source-map": "^0.5.7",
     "acron": "^1.0.5",
     "astring": "^1.8.1",
     "ava": "^4.1.0",
+    "estraverse": "^5.3.0",
     "typescript": "^4.6.3"
   },
   "scripts": {
