--- a/package.json
+++ b/package.json
@@ -1,16 +1,43 @@
 {
+  "name": "async-transformer",
+  "version": "0.1.0",
+  "private": true,
   "dependencies": {
-    "@types/estraverse": "^5.1.1",
+    "@testing-library/react": "^13.0.0",
+    "@testing-library/user-event": "^13.2.1",
+    "@types/lodash": "^4.14.182",
     "@types/node": "^17.0.23",
-    "@types/source-map": "^0.5.7",
+    "@types/react": "^18.0.0",
+    "@types/react-dom": "^18.0.0",
     "acron": "^1.0.5",
     "astring": "^1.8.1",
-    "ava": "^4.1.0",
-    "estraverse": "^5.3.0",
-    "typescript": "^4.6.3"
+    "loadash": "^1.0.0",
+    "react": "^18.1.0",
+    "react-dom": "^18.1.0",
+    "react-scripts": "5.0.1",
+    "typescript": "^4.6.3",
+    "typestyle": "^2.3.0",
+    "web-vitals": "^2.1.0"
   },
   "scripts": {
-    "build": "tsc",
-    "test": "ava test"
+    "start": "react-scripts start",
+    "build": "react-scripts build"
+  },
+  "eslintConfig": {
+    "extends": [
+      "react-app"
+    ]
+  },
+  "browserslist": {
+    "production": [
+      ">0.2%",
+      "not dead",
+      "not op_mini all"
+    ],
+    "development": [
+      "last 1 chrome version",
+      "last 1 firefox version",
+      "last 1 safari version"
+    ]
   }
 }
