--- a/package.json
+++ b/package.json
@@ -3,12 +3,15 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@bramblex/state-model": "^1.0.3",
+    "@bramblex/state-model-react": "^1.0.3",
     "@testing-library/react": "^13.0.0",
     "@testing-library/user-event": "^13.2.1",
     "@types/lodash": "^4.14.182",
     "@types/node": "^17.0.23",
     "@types/react": "^18.0.0",
     "@types/react-dom": "^18.0.0",
+    "@types/uuid": "^8.3.4",
     "acron": "^1.0.5",
     "astring": "^1.8.1",
     "loadash": "^1.0.0",
@@ -17,6 +20,7 @@
     "react-scripts": "5.0.1",
     "typescript": "^4.6.3",
     "typestyle": "^2.3.0",
+    "uuid": "^8.3.2",
     "web-vitals": "^2.1.0"
   },
   "scripts": {
